fix: menu and input appearing in mobile, removed horizontal scroll for mobiles

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Base styles
 ----------------------------------------------------------------*/
 
@@ -34,7 +34,7 @@ h2 {
   width: 100%;
   margin: 0 auto;
   background-color: #0c011e;
-
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,6 +46,10 @@ main {
 }
 
 .--mobile {
+  display: none;
+}
+
+.--tablet {
   display: none;
 }
 
@@ -61,11 +65,31 @@ main {
   .--noMobile {
     display: none;
   }
+
+  .--tablet {
+    display: none;
+  }
 }
 
-/*---------------------------------------------------------------- 
+@media (max-width: 690px) {
+  .--noTablet {
+    display: none;
+  }
+
+  .--tablet {
+    display: block;
+  }
+}
+
+/*----------------------------------------------------------------
   Header styles
 ----------------------------------------------------------------*/
+
+.st_header {
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
 
 .st_header_ellipse {
   position: absolute;
@@ -88,6 +112,14 @@ main {
   display: flex;
   column-gap: 64px;
   align-items: center;
+  width: 100%;
+}
+
+.st_header_right {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .st_header_nav > ul {
@@ -143,7 +175,7 @@ main {
   filter: blur(160px);
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Main(section) styles
 ----------------------------------------------------------------*/
 
@@ -219,7 +251,7 @@ section h2 {
   background-repeat: no-repeat;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Overview(section) styles
 ----------------------------------------------------------------*/
 
@@ -234,7 +266,7 @@ section h2 {
   width: 100%;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Vision(section) styles
 ----------------------------------------------------------------*/
 
@@ -251,7 +283,7 @@ section h2 {
   line-height: 120%;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Overview(section) styles
 ----------------------------------------------------------------*/
 
@@ -302,7 +334,7 @@ section h2 {
   text-decoration: underline;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Mission(section) styles
 ----------------------------------------------------------------*/
 
@@ -321,7 +353,7 @@ section h2 {
   line-height: 120%;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Features(section) styles
 ----------------------------------------------------------------*/
 
@@ -405,7 +437,7 @@ section h2 {
   color: #3514bc;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Blog(section) styles
 ----------------------------------------------------------------*/
 
@@ -501,6 +533,7 @@ section h2 {
 .st_blog_item img {
   width: 124px;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 .st_blog_item_description {
@@ -559,7 +592,7 @@ section h2 {
   color: #e7e3ee;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Socials(section) styles
 ----------------------------------------------------------------*/
 
@@ -807,7 +840,7 @@ section h2 {
   margin-top: 24px;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   Trusted by(section) styles
 ----------------------------------------------------------------*/
 
@@ -919,7 +952,7 @@ section h2 {
   height: 3px;
 }
 
-/*---------------------------------------------------------------- 
+/*----------------------------------------------------------------
   TABLET & MOBILE styles
 ----------------------------------------------------------------*/
 
@@ -928,8 +961,8 @@ section h2 {
   section,
   main {
     width: 750px;
-    padding-left: 40px !important;
-    padding-right: 40px !important;
+    /* padding-left: 40px !important;
+    padding-right: 40px !important; */
   }
 
   .st_footer {
@@ -959,12 +992,14 @@ section h2 {
   section,
   main {
     width: 100%;
-    padding-left: 10px !important;
-    padding-right: 10px !important;
+    padding-left: 42px;
+    padding-right: 42px;
   }
 
   .st_footer {
     width: 100%;
+    padding-left: 42px;
+    padding-right: 42px;
   }
 
   .st_footer_links {
@@ -973,9 +1008,8 @@ section h2 {
 
   .st_header_container {
     display: flex;
-    flex-direction: column;
     row-gap: 32px;
-    padding: 26px 10px;
+    padding: 26px 42px;
   }
 
   .st_header_left {
@@ -983,14 +1017,16 @@ section h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    column-gap: 0px;
   }
 
   .st_header_nav {
-    width: 100%;
+    margin-left: 11%;
   }
 
   .st_features_item img {
     width: 165px;
+    object-fit: cover;
   }
 
   .st_blog_cards {
@@ -1053,5 +1089,37 @@ section h2 {
 
   .st_main_grid {
     background-size: auto;
+  }
+}
+
+@media (max-width: 690px) {
+  section,
+  main {
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .st_footer {
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .st_header_container {
+    padding: 10px 16px;
+  }
+
+  .st_header_logo {
+    width: 100px;
+  }
+
+  .st_header_right {
+    margin-right: 32px;
+  }
+
+  .st_header_nav {
+    margin-left: 0px;
+    margin-top: 32px;
   }
 }
